--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 						<ul>
 							<li><a href="index.html"><div>Home</div></a>
                             <li><a href="#"><div>About Us</div></a>
+                            <li><a href="#"><div>Our Work</div></a>
                             <li><a href="#"><div>Services</div></a>
 							<li><a href="#"><div>contact</div></a>
 						</ul>
